Fixed layout bug in graph layout

--- a/js/apps/system/aardvark/frontend/css/graphlayout.css
+++ b/js/apps/system/aardvark/frontend/css/graphlayout.css
@@ -62,7 +62,6 @@ img.searchSubmit {
 }
 
 .searchByAttribute, .searchEqualsLabel {
-  margin-top: 3px;
   margin-right: 6px;
   margin-left: 6px;
 }
